--- a/OATControl/MainWindow.xaml
+++ b/OATControl/MainWindow.xaml
@@ -584,9 +584,10 @@
 			
 			<Button Grid.Row="3" Grid.Column="2" Content="Mini-Control" Margin="0,2" HorizontalAlignment="Right" Padding="15,0" Style="{StaticResource AccentedSquareButtonStyle}" Command="{Binding ShowMiniControllerCommand}" />
 			<Button Grid.Row="4" Grid.Column="2" Content="Settings" Margin="0,2" HorizontalAlignment="Right" Padding="15,0" IsEnabled="{Binding MountConnected}" Style="{StaticResource AccentedSquareButtonStyle}" Command="{Binding ShowSettingsCommand}"/>
-			<Button Grid.Row="5" Grid.Column="2" Content="Log Files" Margin="0,2" HorizontalAlignment="Right" Padding="15,0" Style="{StaticResource AccentedSquareButtonStyle}" Command="{Binding ShowLogFolderCommand}" />
+            <Button Grid.Row="5" Grid.Column="2" Content="Log Files" Margin="0,2" HorizontalAlignment="Right" Padding="15,0" Style="{StaticResource AccentedSquareButtonStyle}" Command="{Binding ShowLogFolderCommand}" />
+            <Button Grid.Row="6" Grid.Column="2" Content="OAT Visualization" Margin="0,2" HorizontalAlignment="Right" Padding="15,0" Style="{StaticResource AccentedSquareButtonStyle}" Command="{Binding ShowOATVisualizationCommand}" />
 
-			<Grid Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="3" >
+			<Grid Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="5" Margin="0,29,-0.333,0" Grid.RowSpan="2" >
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition Width="*" />
 					<ColumnDefinition Width="*" />
